<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChooseMachine"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/machineToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/common_google_signin_btn_text_dark"
        android:background="?attr/colorPrimary"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/choose_machine_description"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        android:textSize="32sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnBanco"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/banco"
            android:onClick="onClick"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnCN"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cn"
            android:onClick="onClick"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnFresa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/fresa"
            android:onClick="onClick"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnRettifica"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rettifica"
            android:onClick="onClick"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnSquadr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/squadr"
            android:onClick="onClick"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnStozz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/stozz"
            android:onClick="onClick"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnTornio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tornio"
            android:onClick="onClick"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>