<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EndWork"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/commitmentEndToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/common_google_signin_btn_text_dark"
        android:background="?attr/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/titleMarginTopLinear"
        android:textSize="@dimen/titleTextSize"
        android:text="@string/selezionare_la_commessa_che_si_desidera_terminare" />

    <ListView
        android:id="@+id/commitmentToEndListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="190"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:onClick="onClick"
            android:id="@+id/selectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/seleziona_tutto"
            />
        <Button
            android:onClick="onClick"
            android:id="@+id/deselectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/deseleziona_tutto"
            />
        <Button
            android:onClick="onClick"
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textColor="#b71c1c"
            android:layout_weight="1"
            android:text="@string/termina_selezionati"
            />
    </LinearLayout>


</LinearLayout>